CDD-2811: fix CSS container width to align with width control from govuk-frontend

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -48,7 +48,7 @@ $govuk-font-family: var(--font-primary), arial, sans-serif;
 
   // Container width
   --ukhsa-page-min-width: 320px;
-  --ukhsa-page-width: 1400px;
+  --ukhsa-width-container: 1400px;
 
   // Side Nav
   --ukhsa-nav-width: 220px;
